--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
     </section>
 
-
+<div></div>
 
 
     </main>
@@ -65,4 +65,4 @@
     </footer>
   </div>
 </body>
-</html>
+</html> 
