--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
     <main class="content">
       <section class="travel">
+        <div class="travel__kotainer">
        <h1 class="travel__title">Чего мы там не видели?</h1>     
        <p class="travel__quote">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>     
     
@@ -44,6 +45,7 @@
         <li><a class="travel__time-zone">Природных заповедников 105</a></li>
         <li><a class="travel__time-zone">Аэропортов 241</a></li>
       </ul>
+    </div>
 
       </section>
 
@@ -53,7 +55,6 @@
         <img src="./images/__item-11.png" alt="Плацкарт" class="__item">
         <img src="./images/__item-10.png" alt="Плацкарт" class="__item">
         <img src="./images/__item-9.png" alt="Плацкарт" class="__item">
-        <img src="./images/__item-9.png" alt="Плацкарт" class="__item">
         <img src="./images/__item-8.png" alt="Плацкарт" class="__item">
         <img src="./images/__item-7.png" alt="Плацкарт" class="__item">
         <img src="./images/__item-6.png" alt="Плацкарт" class="__item">
@@ -62,6 +63,7 @@
         <img src="./images/__item-3.png" alt="Плацкарт" class="__item">
         <img src="./images/__item-2.png" alt="Плацкарт" class="__item">
         <img src="./images/__item-1.png" alt="Плацкарт" class="__item">        
+        <img src="./images/__item.png" alt="Плацкарт" class="__item">        
       </div>
     </section>
 
@@ -76,7 +78,7 @@
       </div>
       <div>
         <p class="__url-heading">URL</p>
-        <a class="" href="#">park-kosa.ru</a>   
+        <a class="place__link" href="#">park-kosa.ru</a>   
         <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>     
         <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>     
       </div>
@@ -92,7 +94,7 @@
       </div>
       <div>
         <p class="__url-heading">URL</p>
-        <a class="" href="#">National Geographic</a>   
+        <a class="place__link" href="#">National Geographic</a>   
         <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
           тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>     
         <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
@@ -110,7 +112,7 @@
       </div>
       <div>
         <p class="__url-heading">URL</p>
-        <a class="" href="#">YouTube</a>   
+        <a class="place__link" href="#">YouTube</a>   
         <p class="place__paragraph">Алтай — одно из красивейших мест в России. 
           В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>     
         <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>     
@@ -127,7 +129,7 @@
       </div>
       <div>
         <p class="__url-heading">URL</p>
-        <a class="" href="#">https://vk.com/baikalmile</a>   
+        <a class="place__link" href="#">https://vk.com/baikalmile</a>   
         <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
           В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
           в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
@@ -144,31 +146,19 @@
       </div>
       <div>
         <p class="__url-heading">URL</p>
-        <a class="" href="#">http://vodlozero.ru/</a>   
+        <a class="place__link" href="#">http://vodlozero.ru/</a>   
         <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>     
         <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>     
       </div>
     </div>
     </section>
 
-
+    <section class="feynman">
+      <h2 class="feynman__title">До Байкала «на собаках»</h2>
+      <p class="feynman__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+     </section>
 
     </main>
-
-    <footer class="footer_">
-      <div class="columns">
-      <div">
-        <a class="__link" href="#">Карты</a>
-        <a class="__link" href="#">Погода</a>
-        <a class="__link" href="#">Расписание</a>
-        <a class="__link" href="#">Календарь</a>
-        <a class="__link" href="#">Путешествия</a>
-      </div>  
-        <p class="footer__copyright">© 2020. Впишите своё имя</p>
-      </div>
-
-    </footer>
-
 
 
     <section class="places">
