--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="page">
     <header class="header">
       <div class="header__container">
-        <img src="./images/__logo.png" alt="Логотип" class="logo_place_header">
+        <img src="./images/__logo.png" alt="Логотип" class="logo logo_place_header">
         <div>
          <a class="header__link" href="#">Ru</a>
          <a class="header__link" href="#">En</a>
@@ -20,6 +20,7 @@
 
       </div>
     </header>
+
 
 
     <section class="cover">
@@ -52,18 +53,18 @@
       <section class="grid">
 
       <div class="cards">
-        <img src="./images/__item-11.png" alt="Плацкарт" class="__item">
-        <img src="./images/__item-10.png" alt="Плацкарт" class="__item">
-        <img src="./images/__item-9.png" alt="Плацкарт" class="__item">
-        <img src="./images/__item-8.png" alt="Плацкарт" class="__item">
-        <img src="./images/__item-7.png" alt="Плацкарт" class="__item">
-        <img src="./images/__item-6.png" alt="Плацкарт" class="__item">
-        <img src="./images/__item-5.png" alt="Плацкарт" class="__item">
-        <img src="./images/__item-4.png" alt="Плацкарт" class="__item">
-        <img src="./images/__item-3.png" alt="Плацкарт" class="__item">
-        <img src="./images/__item-2.png" alt="Плацкарт" class="__item">
-        <img src="./images/__item-1.png" alt="Плацкарт" class="__item">        
-        <img src="./images/__item.png" alt="Плацкарт" class="__item">        
+        <img src="./images/__item-11.png" alt="Плацкарт" class="cards__item">
+        <img src="./images/__item-10.png" alt="Плацкарт" class="cards__item">
+        <img src="./images/__item-9.png" alt="Плацкарт" class="cards__item">
+        <img src="./images/__item-8.png" alt="Плацкарт" class="cards__item">
+        <img src="./images/__item-7.png" alt="Плацкарт" class="cards__item">
+        <img src="./images/__item-6.png" alt="Плацкарт" class="cards__item">
+        <img src="./images/__item-5.png" alt="Плацкарт" class="cards__item">
+        <img src="./images/__item-4.png" alt="Плацкарт" class="cards__item">
+        <img src="./images/__item-3.png" alt="Плацкарт" class="cards__item">
+        <img src="./images/__item-2.png" alt="Плацкарт" class="cards__item">
+        <img src="./images/__item-1.png" alt="Плацкарт" class="cards__item">        
+        <img src="./images/__item.png" alt="Плацкарт" class="cards__item">        
       </div>
     </section>
 
@@ -77,7 +78,7 @@
         <img src="./images/__image-4.png" alt="Курвшская коса" class="place__kosa">
       </div>
       <div>
-        <p class="__url-heading">URL</p>
+        <p class="place__url">URL</p>
         <a class="place__link" href="#">park-kosa.ru</a>   
         <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>     
         <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>     
@@ -93,7 +94,7 @@
         <img src="./images/__image-3.png" alt="Курвшская коса" class="place__kosa">
       </div>
       <div>
-        <p class="__url-heading">URL</p>
+        <p class="place__url">URL</p>
         <a class="place__link" href="#">National Geographic</a>   
         <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
           тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>     
@@ -111,7 +112,7 @@
         <img src="./images/__image-2.png" alt="Курвшская коса" class="place__kosa">
       </div>
       <div>
-        <p class="__url-heading">URL</p>
+        <p class="place__url">URL</p>
         <a class="place__link" href="#">YouTube</a>   
         <p class="place__paragraph">Алтай — одно из красивейших мест в России. 
           В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>     
@@ -128,7 +129,7 @@
         <img src="./images/__image-1.png" alt="Курвшская коса" class="place__kosa">
       </div>
       <div>
-        <p class="__url-heading">URL</p>
+        <p class="place__url">URL</p>
         <a class="place__link" href="#">https://vk.com/baikalmile</a>   
         <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
           В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
@@ -145,7 +146,7 @@
         <img src="./images/__image.png" alt="Курвшская коса" class="place__kosa">
       </div>
       <div>
-        <p class="__url-heading">URL</p>
+        <p class="place__url">URL</p>
         <a class="place__link" href="#">http://vodlozero.ru/</a>   
         <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>     
         <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>     
@@ -153,22 +154,22 @@
     </div>
     </section>
 
-    <section class="feynman">
-      <h2 class="feynman__title">До Байкала «на собаках»</h2>
-      <p class="feynman__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+    <section class="baikal">
+      <h2 class="baikal__title">До Байкала «на собаках»</h2>
+      <p class="baikal__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
      </section>
 
     </main>
 
 
-    <section class="places">
+    <section class="footer">
       <div class="footer__columns">
       <div>
-        <a class="__link" href="#">Карты</a>
-        <a class="__link" href="#">Погода</a>
-        <a class="__link" href="#">Расписание</a>
-        <a class="__link" href="#">Календарь</a>
-        <a class="__link" href="#">Путешествия</a>
+        <a class="footer__link" href="#">Карты</a>
+        <a class="footer__link" href="#">Погода</a>
+        <a class="footer__link" href="#">Расписание</a>
+        <a class="footer__link" href="#">Календарь</a>
+        <a class="footer__link" href="#">Путешествия</a>
       </div>
       <div>
         <p class="footer__copyright">© 2020. Впишите своё имя</p>   
