--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,14 +9,18 @@
   <link rel="stylesheet" href="https://code.s3.yandex.net/web-code/normalize.css">
   <link rel="stylesheet" href="style.css">
 </head>
+
+
+
+
 <body>
   <div class="page">
     <header class="header">
       <div class="header__container">
         <img src="./images/__logo.png" alt="Логотип" class="logo logo_place_header">
         <div>
-         <a class="header__link" href="#">Ru</a>
-         <a class="header__link" href="#">En</a>
+          <a class="header__link" href="#">Ru</a>
+          <a class="header__link" href="#">En</a>
         </div>
 
       </div>
@@ -23,161 +28,199 @@
 
 
 
-    <section class="cover">
-      <div class="cover__container">
-        <h1 class="cover__title">Путешествия по России</h1>
-        <p class="cover__subtitle">Настоящая страна не в выпусках 
-            новостей, а здесь.</p>
-        <img src="./images/kalegin-michail-179870-unsplash.png" alt="Плацкарт" class="cover__train">
-        <p class="cover__capation">ВАША ПОЛКА — ВЕРХНЯЯ</p>
+
+    <section class="lead">
+      <div class="lead__container">
+        <h1 class="lead__title">Путешествия по России</h1>
+        <p class="lead__subtitle">Настоящая страна не в выпусках
+          новостей, а здесь.</p>
+
+        <img src="./images/__way.png" alt="Маршрут" class="lead__way">
+
+        <img src="./images/kalegin-michail-179870-unsplash.png" alt="Плацкарт" class="lead__train">
+
       </div>
     </section>
+
+
+
+
 
     <main class="content">
       <section class="travel">
         <div class="travel__kotainer">
-       <h1 class="travel__title">Чего мы там не видели?</h1>     
-       <p class="travel__quote">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>     
-    
-       <ul class="travel__time-zones">
-        <li><a class="travel__time-zone">Часовых поясов 11</a></li>
-        <li><a class="travel__time-zone">Объектов культурного наследия 12</a></li>
-        <li><a class="travel__time-zone">Объектов культурного наследия 16</a></li>
-        <li><a class="travel__time-zone">Природных заповедников 105</a></li>
-        <li><a class="travel__time-zone">Аэропортов 241</a></li>
-      </ul>
-    </div>
+          <h1 class="travel__title">Чего мы там не видели?</h1>
+          <p class="travel__quote">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
+            провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
+            вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти
+            красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова
+            — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч
+            километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+
+          <ul class="travel__time-zones">
+            <li><a class="travel__time-zone">Часовых поясов 11</a></li>
+            <li><a class="travel__time-zone">Объектов культурного наследия 12</a></li>
+            <li><a class="travel__time-zone">Объектов культурного наследия 16</a></li>
+            <li><a class="travel__time-zone">Природных заповедников 105</a></li>
+            <li><a class="travel__time-zone">Аэропортов 241</a></li>
+          </ul>
+        </div>
 
       </section>
 
       <section class="grid">
 
-      <div class="cards">
-        <img src="./images/__item-11.png" alt="Плацкарт" class="cards__item">
-        <img src="./images/__item-10.png" alt="Плацкарт" class="cards__item">
-        <img src="./images/__item-9.png" alt="Плацкарт" class="cards__item">
-        <img src="./images/__item-8.png" alt="Плацкарт" class="cards__item">
-        <img src="./images/__item-7.png" alt="Плацкарт" class="cards__item">
-        <img src="./images/__item-6.png" alt="Плацкарт" class="cards__item">
-        <img src="./images/__item-5.png" alt="Плацкарт" class="cards__item">
-        <img src="./images/__item-4.png" alt="Плацкарт" class="cards__item">
-        <img src="./images/__item-3.png" alt="Плацкарт" class="cards__item">
-        <img src="./images/__item-2.png" alt="Плацкарт" class="cards__item">
-        <img src="./images/__item-1.png" alt="Плацкарт" class="cards__item">        
-        <img src="./images/__item.png" alt="Плацкарт" class="cards__item">        
-      </div>
-    </section>
+        <div class="cards">
+          <img src="./images/__item-11.png" alt="Плацкарт" class="cards__item">
+          <img src="./images/__item-10.png" alt="Плацкарт" class="cards__item">
+          <img src="./images/__item-9.png" alt="Плацкарт" class="cards__item">
+          <img src="./images/__item-8.png" alt="Плацкарт" class="cards__item">
+          <img src="./images/__item-7.png" alt="Плацкарт" class="cards__item">
+          <img src="./images/__item-6.png" alt="Плацкарт" class="cards__item">
+          <img src="./images/__item-5.png" alt="Плацкарт" class="cards__item">
+          <img src="./images/__item-4.png" alt="Плацкарт" class="cards__item">
+          <img src="./images/__item-3.png" alt="Плацкарт" class="cards__item">
+          <img src="./images/__item-2.png" alt="Плацкарт" class="cards__item">
+          <img src="./images/__item-1.png" alt="Плацкарт" class="cards__item">
+          <img src="./images/__item.png" alt="Плацкарт" class="cards__item">
+        </div>
+      </section>
 
-   
-   
-   
-    <section class="places">
-      <div class="place">
-      <div>
-        <h1 class="place__title">Куршская коса</h1>
-        <img src="./images/__image-4.png" alt="Курвшская коса" class="place__kosa">
-      </div>
-      <div>
-        <p class="place__url">URL</p>
-        <a class="place__link" href="#">park-kosa.ru</a>   
-        <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>     
-        <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>     
-      </div>
-    </div>
-    </section>
 
-   
-    <section class="places">
-      <div class="place">
-      <div>
-        <h1 class="place__title">Кольский</h1>
-        <img src="./images/__image-3.png" alt="Курвшская коса" class="place__kosa">
-      </div>
-      <div>
-        <p class="place__url">URL</p>
-        <a class="place__link" href="#">National Geographic</a>   
-        <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
-          тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>     
-        <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
-          в Мурманск.</p>     
-      </div>
-    </div>
-    </section>
 
-   
-    <section class="places">
-      <div class="place">
-      <div>
-        <h1 class="place__title">Алтай</h1>
-        <img src="./images/__image-2.png" alt="Курвшская коса" class="place__kosa">
-      </div>
-      <div>
-        <p class="place__url">URL</p>
-        <a class="place__link" href="#">YouTube</a>   
-        <p class="place__paragraph">Алтай — одно из красивейших мест в России. 
-          В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>     
-        <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>     
-      </div>
-    </div>
-    </section>
 
-   
-    <section class="places">
-      <div class="place">
-      <div>
-        <h1 class="place__title">Зимний Байкал</h1>
-        <img src="./images/__image-1.png" alt="Курвшская коса" class="place__kosa">
-      </div>
-      <div>
-        <p class="place__url">URL</p>
-        <a class="place__link" href="#">https://vk.com/baikalmile</a>   
-        <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
-          В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
-          в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
-    </div>
-    </section>
+      <section class="places">
+        <div class="place">
+          <div>
+            <h1 class="place__title">Куршская коса</h1>
+            <img src="./images/__image-4.png" alt="Куршская коса" class="place__kosa">
+          </div>
+          <div>
+            <p class="place__url">URL</p>
+            <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
+            <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
+              спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная
+              природная зона на краю российского анклава.</p>
+            <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и
+              исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие
+              россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы
+              и запах стального, прохладного моря.</p>
+          </div>
+        </div>
+      </section>
 
-   
-   
-    <section class="places">
-      <div class="place">
-      <div>
-        <h1 class="place__title">Карелия</h1>
-        <img src="./images/__image.png" alt="Курвшская коса" class="place__kosa">
-      </div>
-      <div>
-        <p class="place__url">URL</p>
-        <a class="place__link" href="#">http://vodlozero.ru/</a>   
-        <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>     
-        <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>     
-      </div>
-    </div>
-    </section>
 
-    <section class="baikal">
-      <h2 class="baikal__title">До Байкала «на собаках»</h2>
-      <p class="baikal__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-     </section>
+      <section class="places">
+        <div class="place">
+          <div>
+            <h1 class="place__title">Кольский</h1>
+            <img src="./images/__image-3.png" alt="Кольский" class="place__kosa">
+          </div>
+          <div>
+            <p class="place__url">URL</p>
+            <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy
+            ">National Geographic</a>
+            <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой
+              на юг —
+              тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+            <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в
+              Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии.
+              Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно
+              накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
+              в Мурманск.</p>
+          </div>
+        </div>
+      </section>
+
+
+      <section class="places">
+        <div class="place">
+          <div>
+            <h1 class="place__title">Алтай</h1>
+            <img src="./images/__image-2.png" alt="Алтай" class="place__kosa">
+          </div>
+          <div>
+            <p class="place__url">URL</p>
+            <a class="place__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
+            <p class="place__paragraph">Алтай — одно из красивейших мест в России.
+              В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
+              озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным
+              воздухом.</p>
+            <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите
+              всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на
+              равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
+          </div>
+        </div>
+      </section>
+
+
+      <section class="places">
+        <div class="place">
+          <div>
+            <h1 class="place__title">Зимний Байкал</h1>
+            <img src="./images/__image-1.png" alt="Зимний Байкал" class="place__kosa">
+          </div>
+          <div>
+            <p class="place__url">URL</p>
+            <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+            <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
+              лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
+              национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем
+              полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
+              В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
+              в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+          </div>
+      </section>
+
+
+
+      <section class="places">
+        <div class="place">
+          <div>
+            <h1 class="place__title">Карелия</h1>
+            <img src="./images/__image.png" alt="Карелия" class="place__kosa">
+          </div>
+          <div>
+            <p class="place__url">URL</p>
+            <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
+            <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
+              спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная
+              природная зона на краю российского анклава.</p>
+            <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и
+              исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие
+              россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы
+              и запах стального, прохладного моря.</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="baikal">
+        <h2 class="baikal__title">До Байкала «на собаках»</h2>
+        <p class="baikal__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
+          электричках.</p>
+        <div class="baikal__overlay"></div>
+      </section>
 
     </main>
 
 
     <section class="footer">
       <div class="footer__columns">
-      <div>
-        <a class="footer__link" href="#">Карты</a>
-        <a class="footer__link" href="#">Погода</a>
-        <a class="footer__link" href="#">Расписание</a>
-        <a class="footer__link" href="#">Календарь</a>
-        <a class="footer__link" href="#">Путешествия</a>
+        <div>
+          <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
+          <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
+          <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
+          <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
+          <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
+        </div>
+        <div>
+          <p class="footer__copyright">© 2020. Впишите своё имя</p>
+        </div>
       </div>
-      <div>
-        <p class="footer__copyright">© 2020. Впишите своё имя</p>   
-      </div>
-    </div>
     </section>
 
-    
+
   </div>
 </body>
+
 </html>
