--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Космос: билет в один конец</title>
-  <link rel="stylesheet" href="https://code.s3.yandex.net/web-code/normalize.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/fonts.css">
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
-
-
-
 
 <body>
   <div class="page">
@@ -26,25 +24,15 @@
       </div>
     </header>
 
-
-
-
     <section class="lead">
       <div class="lead__container">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках
           новостей, а здесь.</p>
-
         <img src="./images/__way.png" alt="Маршрут" class="lead__way">
-
         <img src="./images/kalegin-michail-179870-unsplash.png" alt="Плацкарт" class="lead__train">
-
       </div>
     </section>
-
-
-
-
 
     <main class="content">
       <section class="travel">
@@ -56,48 +44,49 @@
             красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова
             — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч
             километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
-
           <ul class="travel__time-zones">
-            <li><a class="travel__time-zone">Часовых поясов 11</a></li>
-            <li><a class="travel__time-zone">Объектов культурного наследия 12</a></li>
-            <li><a class="travel__time-zone">Объектов культурного наследия 16</a></li>
-            <li><a class="travel__time-zone">Природных заповедников 105</a></li>
-            <li><a class="travel__time-zone">Аэропортов 241</a></li>
+            <li><a class="travel__time-zone">Часовых поясов <span class="travel__span-accent">11</span></a></li>
+            <li><a class="travel__time-zone">Объектов культурного наследия ЮНЕСКО<span
+                  class="travel__span-accent">12</span></a></li>
+            <li><a class="travel__time-zone">Объектов культурного наследия ЮНЕСКО<span
+                  class="travel__span-accent">16</span></a></li>
+            <li><a class="travel__time-zone">Природных заповедников <span class="travel__span-accent">105</span></a>
+            </li>
+            <li><a class="travel__time-zone">Аэропортов <span class="travel__span-accent">241</span></a></li>
           </ul>
         </div>
-
       </section>
 
-      <section class="grid">
-
+      <div class="grid">
         <div class="cards">
-          <img src="./images/__item-11.png" alt="Плацкарт" class="cards__item">
-          <img src="./images/__item-10.png" alt="Плацкарт" class="cards__item">
-          <img src="./images/__item-9.png" alt="Плацкарт" class="cards__item">
-          <img src="./images/__item-8.png" alt="Плацкарт" class="cards__item">
-          <img src="./images/__item-7.png" alt="Плацкарт" class="cards__item">
-          <img src="./images/__item-6.png" alt="Плацкарт" class="cards__item">
-          <img src="./images/__item-5.png" alt="Плацкарт" class="cards__item">
-          <img src="./images/__item-4.png" alt="Плацкарт" class="cards__item">
-          <img src="./images/__item-3.png" alt="Плацкарт" class="cards__item">
-          <img src="./images/__item-2.png" alt="Плацкарт" class="cards__item">
-          <img src="./images/__item-1.png" alt="Плацкарт" class="cards__item">
-          <img src="./images/__item.png" alt="Плацкарт" class="cards__item">
+          <img src="./images/__item-11.png" alt="Окно" class="cards__item">
+          <img src="./images/__item-10.png" alt="Горы" class="cards__item">
+          <img src="./images/__item-9.png" alt="Собака на сене" class="cards__item">
+          <img src="./images/__item-8.png" alt="Туман в горах" class="cards__item">
+          <img src="./images/__item-7.png" alt="Лёд" class="cards__item">
+          <img src="./images/__item-6.png" alt="Берег океана" class="cards__item">
+          <img src="./images/__item-5.png" alt="Горы" class="cards__item">
+          <img src="./images/__item-4.png" alt="Переход" class="cards__item">
+          <img src="./images/__item-3.png" alt="Туман над сопками" class="cards__item">
+          <img src="./images/__item-2.png" alt="Вулкан" class="cards__item">
+          <img src="./images/__item-1.png" alt="Скалистый берег" class="cards__item">
+          <img src="./images/__item.png" alt="Еще один туман" class="cards__item">
         </div>
-      </section>
-
-
-
+      </div>
 
       <section class="places">
         <div class="place">
           <div>
             <h1 class="place__title">Куршская коса</h1>
+          </div>
+          <div>
+            <p class="place__url place__url_size">URL</p>
+            <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
+          </div>
+          <div>
             <img src="./images/__image-4.png" alt="Куршская коса" class="place__kosa">
           </div>
           <div>
-            <p class="place__url">URL</p>
-            <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
             <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
               спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная
               природная зона на краю российского анклава.</p>
@@ -109,17 +98,20 @@
         </div>
       </section>
 
-
       <section class="places">
         <div class="place">
           <div>
             <h1 class="place__title">Кольский</h1>
-            <img src="./images/__image-3.png" alt="Кольский" class="place__kosa">
           </div>
           <div>
             <p class="place__url">URL</p>
             <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy
             ">National Geographic</a>
+          </div>
+          <div>
+            <img src="./images/__image-3.png" alt="Кольский" class="place__kosa">
+          </div>
+          <div>
             <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой
               на юг —
               тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
@@ -132,16 +124,19 @@
         </div>
       </section>
 
-
       <section class="places">
         <div class="place">
           <div>
             <h1 class="place__title">Алтай</h1>
-            <img src="./images/__image-2.png" alt="Алтай" class="place__kosa">
           </div>
           <div>
             <p class="place__url">URL</p>
             <a class="place__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
+          </div>
+          <div>
+            <img src="./images/__image-2.png" alt="Алтай" class="place__kosa">
+          </div>
+          <div>
             <p class="place__paragraph">Алтай — одно из красивейших мест в России.
               В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
               озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным
@@ -153,44 +148,48 @@
         </div>
       </section>
 
-
       <section class="places">
         <div class="place">
           <div>
             <h1 class="place__title">Зимний Байкал</h1>
+          </div>
+          <div>
+            <p class="place__url place__url_size">URL</p>
+            <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+          </div>
+          <div>
             <img src="./images/__image-1.png" alt="Зимний Байкал" class="place__kosa">
           </div>
           <div>
-            <p class="place__url">URL</p>
-            <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
-            <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
-              лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
-              национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем
-              полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
-              В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
-              в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+            <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
+              в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в
+              России.</p>
+            <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по
+              скийорингу. Это такой вид спорта, когда лыжник привязывает себя
+              к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале
+              «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
           </div>
+        </div>
       </section>
-
-
 
       <section class="places">
         <div class="place">
           <div>
             <h1 class="place__title">Карелия</h1>
-            <img src="./images/__image.png" alt="Карелия" class="place__kosa">
           </div>
           <div>
             <p class="place__url">URL</p>
             <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
-            <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
-              спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная
-              природная зона на краю российского анклава.</p>
-            <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и
-              исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие
-              россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы
-              и запах стального, прохладного моря.</p>
           </div>
+          <div>
+            <img src="./images/__image.png" alt="Карелия" class="place__kosa">
+          </div>
+          <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
+            лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
+            национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем
+            полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
+            В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
+            в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
         </div>
       </section>
 
@@ -200,11 +199,9 @@
           электричках.</p>
         <div class="baikal__overlay"></div>
       </section>
-
     </main>
 
-
-    <section class="footer">
+    <footer class="footer">
       <div class="footer__columns">
         <div>
           <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
@@ -217,8 +214,7 @@
           <p class="footer__copyright">© 2020. Впишите своё имя</p>
         </div>
       </div>
-    </section>
-
+    </footer>
 
   </div>
 </body>
