--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="./styles/normalize.css">
   <link rel="stylesheet" href="./styles/fonts.css">
   <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./styles/stylemedia425.css">
+  <link rel="stylesheet" href="./styles/stylemedia768_425.css">
+  <link rel="stylesheet" href="./styles/stylemedia1024_768.css">
 </head>
 
 <body>
@@ -31,6 +34,7 @@
           новостей, а здесь.</p>
         <img src="./images/__way.png" alt="Маршрут" class="lead__way">
         <img src="./images/kalegin-michail-179870-unsplash.png" alt="Плацкарт" class="lead__train">
+        <p class="lead__quote">ВАША ПОЛКА — ВЕРХНЯЯ</p>
       </div>
     </section>
 
@@ -45,14 +49,13 @@
             — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч
             километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
           <ul class="travel__time-zones">
-            <li><a class="travel__time-zone">Часовых поясов <span class="travel__span-accent">11</span></a></li>
-            <li><a class="travel__time-zone">Объектов культурного наследия ЮНЕСКО<span
-                  class="travel__span-accent">12</span></a></li>
-            <li><a class="travel__time-zone">Объектов культурного наследия ЮНЕСКО<span
-                  class="travel__span-accent">16</span></a></li>
-            <li><a class="travel__time-zone">Природных заповедников <span class="travel__span-accent">105</span></a>
-            </li>
-            <li><a class="travel__time-zone">Аэропортов <span class="travel__span-accent">241</span></a></li>
+            <li class="travel__time-zone">Часовых поясов <span class="travel__span-accent">11</span></li>
+            <li class="travel__time-zone">Объектов культурного наследия ЮНЕСКО<span
+                  class="travel__span-accent">12</span></li>
+            <li class="travel__time-zone">Объектов культурного наследия ЮНЕСКО<span
+                  class="travel__span-accent">16</span></li>
+            <li class="travel__time-zone">Природных заповедников <span class="travel__span-accent">105</span></li>
+            <li class="travel__time-zone">Аэропортов <span class="travel__span-accent">241</span></li>
           </ul>
         </div>
       </section>
@@ -197,13 +200,16 @@
         <h2 class="baikal__title">До Байкала «на собаках»</h2>
         <p class="baikal__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
           электричках.</p>
+          <img src="./images/__background.png" alt="Плацкарт" class="baikal__train">
+
         <div class="baikal__overlay"></div>
+
       </section>
     </main>
 
     <footer class="footer">
       <div class="footer__columns">
-        <div>
+        <div class="footer__list">
           <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
           <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
           <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
