--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="./styles/stylemedia1024_768.css">
 </head>
 
-<body>
+<body class="root">
   <div class="page">
     <header class="header">
       <div class="header__container">
