--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="page">
     <header class="header">
       <div class="header__container">
-        <img src="./images/__logo.png" alt="Логотип" class="logo logo_place_header">
+        <img src="./images/__logo.png" alt="Логотип" class="logo logo__place_header">
         <div>
           <a class="header__link" href="#">Ru</a>
           <a class="header__link" href="#">En</a>
@@ -40,7 +40,7 @@
 
     <main class="content">
       <section class="travel">
-        <div class="travel__kotainer">
+        <div class="travel__container">
           <h1 class="travel__title">Чего мы там не видели?</h1>
           <p class="travel__quote">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
             провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
@@ -196,15 +196,19 @@
         </div>
       </section>
 
+
       <section class="baikal">
+        <a class="baikal__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
         <h2 class="baikal__title">До Байкала «на собаках»</h2>
         <p class="baikal__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
           электричках.</p>
           <img src="./images/__background.png" alt="Плацкарт" class="baikal__train">
-
-        <div class="baikal__overlay"></div>
+          <div class="baikal__overlay"></div>
+      </a>
 
       </section>
+
+
     </main>
 
     <footer class="footer">
