--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
   <title>Космос: билет в один конец</title>
   <link rel="stylesheet" href="./styles/normalize.css">
   <link rel="stylesheet" href="./styles/fonts.css">
-  <link rel="stylesheet" href="./styles/style.css">
-  <link rel="stylesheet" href="./styles/stylemedia425.css">
-  <link rel="stylesheet" href="./styles/stylemedia768_425.css">
-  <link rel="stylesheet" href="./styles/stylemedia1024_768.css">
+  <link rel="stylesheet" href="./pages/index.css">
 </head>
 
 <body class="root">
@@ -78,7 +75,7 @@
       </div>
 
       <section class="places">
-        <div class="place">
+        <div class="place__container">
           <div>
             <h1 class="place__title">Куршская коса</h1>
           </div>
@@ -102,7 +99,7 @@
       </section>
 
       <section class="places">
-        <div class="place">
+        <div class="place__container">
           <div>
             <h1 class="place__title">Кольский</h1>
           </div>
@@ -128,7 +125,7 @@
       </section>
 
       <section class="places">
-        <div class="place">
+        <div class="place__container">
           <div>
             <h1 class="place__title">Алтай</h1>
           </div>
@@ -152,7 +149,7 @@
       </section>
 
       <section class="places">
-        <div class="place">
+        <div class="place__container">
           <div>
             <h1 class="place__title">Зимний Байкал</h1>
           </div>
@@ -176,7 +173,7 @@
       </section>
 
       <section class="places">
-        <div class="place">
+        <div class="place__container">
           <div>
             <h1 class="place__title">Карелия</h1>
           </div>
