--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       <section class="baikal">
         <a class="baikal__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
           <h2 class="baikal__title">До Байкала «на собаках»</h2>
-          <p class="baikal__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на</p>
+          <p class="baikal__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
         </a>
       </section>
 
